Meu segundo commit meu segundo commit

--- a/sistema/cliente/templates/cliente/abacate.html
+++ b/sistema/cliente/templates/cliente/abacate.html
@@ -3,6 +3,12 @@
     </head>
     <body>
 
+        {% comment ' Código comentado porque sim' %}
+            <div>
+                qq coisa
+            </div>
+        {% endcomment %}        
+
         <p>
             <a href="{% url 'cliente:hora' %}">Ver a hora</a>
         </p> 
