--- a/sistema/cliente/templates/cliente/index.html
+++ b/sistema/cliente/templates/cliente/index.html
@@ -1,7 +1,10 @@
-html = """<html>
-        <head>
-        </head>
-        <body>
-            <h1><marquee>SOU UMA MENSAGEM QUE PASSEIA</MARQUEE><h1>
-        </body>
-    </html>"""
+{% extends 'cliente/base.html' %}
+            
+            {% block conteudo %}
+            
+            {% endblock conteudo %}
+
+
+
+
+        
