--- a/sistema/cliente/templates/cliente/hora.html
+++ b/sistema/cliente/templates/cliente/hora.html
@@ -2,12 +2,13 @@
         <head>
         </head>
         <body>
-
+              <h1>
             {% if hora %}
-                 <h1> {{ hora }} </h1>
+                {{ hora }} 
             {% else %}
-                 <h1>Hora não disponível</h1>     
-            {% endif %}     
+                 Hora não disponível     
+            {% endif %} 
+               </h1>
 
         </body>
 </html>
