--- a/sistema/cliente/templates/cliente/cidade.html
+++ b/sistema/cliente/templates/cliente/cidade.html
@@ -2,6 +2,21 @@
 
     {% block conteudo %}
 
-        {{ form }}
+        {% if erro %}
+            <div class="alert alert-danger">{{ erro }}</div>
+        {% endif %}  
+
+        {% if sucesso %}
+            <div class="alert alert-danger">{{ sucesso }}</div>
+        {% endif %}      
+
+        <form action="{% url 'cliente:cidade' %}" method="post">
+            <table class="table table-striped">
+
+                {{ form.as_table}}
+
+                <tr><td> <input type="submit" class="btn btn-primary"/> </td></tr>
+            </table>
+        </form>        
 
     {% endblock conteudo %}
