--- a/sistema/cliente/templates/cliente/endereco.html
+++ b/sistema/cliente/templates/cliente/endereco.html
@@ -2,6 +2,13 @@
 
     {% block conteudo %}
 
-        {{ form.as_p }}
+        <form action="{% url 'cliente:cadastra' %}" method="post">
+            <table class="table table-striped">
+
+                {{ form.as_table}}
+
+                <tr><td> <input type="submit" class="btn btn-primary"/> </td></tr>
+            </table>
+        </form>        
 
     {% endblock conteudo %}
