--- a/sistema/cliente/templates/cliente/index.html
+++ b/sistema/cliente/templates/cliente/index.html
@@ -1,6 +1,8 @@
 {% extends 'cliente/base.html' %}
             
             {% block conteudo %}
+
+                <h1><marquee>Sou uma mensagem que passeia</marquee></h1>
             
             {% endblock conteudo %}
 
